--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 :root {
     --color-primary: #6CAC3D !important;
+    --color-secondary: #2D4872 !important;
 }
 
 * {
@@ -98,21 +99,21 @@
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #0b5ed7;
-    border-color: #0a58ca;
+    background-color: var(--color-primary) !important;
+    border-color: var(--color-primary) !important;
 }
 
 .btn-check:focus + .btn-primary, .btn-primary:focus {
     color: #fff;
-    background-color: #0b5ed7;
-    border-color: #0a58ca;
+    background-color: var(--color-primary) !important;
+    border-color: var(--color-primary) !important;
     box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
 }
 
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #0a58ca;
-    border-color: #0a53be;
+    background-color: var(--color-primary) !important;
+    border-color: var(--color-primary) !important;
 }
 
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
@@ -121,10 +122,65 @@
 
 .btn-primary:disabled, .btn-primary.disabled {
     color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd;
+    background-color: var(--color-primary) !important;
+    border-color: var(--color-primary) !important;
 }
 
+.btn-secondary {
+    color: #fff;
+    background-color: var(--color-primary) !important;
+    border-color: var(--color-primary) !important;
+}
+
+.btn-outline-secondary {
+    color: #fff;
+    border-color: var(--color-primary) !important;
+}
+
+#myTab > li > .active {
+    color: #fff !important;
+    background-color: var(--color-secondary) !important;
+    border-color: var(--color-primary) !important;
+}
+
+#myTab > li > button {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    color: #000 !important;
+    background-color: #E6E6E6 !important;
+    margin-right: 20px;
+    border-color: #E6E6E6 !important;
+}
+
+.btn-secondary:hover {
+    color: #fff;
+    background-color: #2D4872;
+    border-color: #2D4872;
+}
+
+.btn-check:focus + .btn-secondary, .btn-secondary:focus {
+    color: #fff;
+    background-color: #2D4872;
+    border-color: #2D4872;
+    box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
+}
+
+.btn-check:checked + .btn-secondary, .btn-check:active + .btn-secondary, .btn-secondary:active, .btn-secondary.active, .show > .btn-secondary.dropdown-toggle {
+    color: #fff;
+    background-color: #2D4872;
+    border-color: #2D4872;
+}
+
+.btn-check:checked + .btn-secondary:focus, .btn-check:active + .btn-secondary:focus, .btn-secondary:active:focus, .btn-secondary.active:focus, .show > .btn-secondary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
+}
+
+.btn-secondary:disabled, .btn-secondary.disabled {
+    color: #fff;
+    background-color: #2D4872;
+    border-color: #2D4872;
+}
 
 .text-color-secondary-light {
     color: #2D4872 !important;
@@ -134,9 +190,17 @@
     color: #2D4872 !important;
 }
 
+.text-color-primary {
+    color: var(--color-primary) !important;
+}
+
 .bg-color-primary {
     --bs-bg-opacity: 1;
     background-color: var(--color-primary) !important;
+}
+
+.border-color-primary {
+    border-color: var(--color-primary) !important;
 }
 
 .border-color-primary {
