--- a/css/style.css
+++ b/css/style.css
@@ -356,3 +356,19 @@
         text-align: center;
     }
 }
+
+.sidebar > a {
+    color: black !important;
+}
+
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+}
+
+.sidebar > .nav-item, .nav-link {
+    color: black !important;
+}
