--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,16 @@
 }
 
 * {
-    font-family: "Roboto", Arial;
+    font-family: "Roboto", serif;
 }
 
 .logo {
     font-size: 28px !important;
-    font-family: "Saira Stencil One", Arial !important;
+    font-family: "Saira Stencil One", serif !important;
+}
+
+.logo > span {
+    font-family: "Saira Stencil One", serif !important;
 }
 
 .saira-stencil-one-regular {
@@ -359,6 +363,25 @@
 
 .sidebar > a {
     color: black !important;
+}
+
+.carousel-indicators button.thumbnail {
+    width: 100px;
+}
+
+.carousel-indicators button.thumbnail:not(.active) {
+    opacity: 0.7;
+}
+
+.carousel-indicators {
+    position: static;
+}
+
+@media screen and (min-width: 992px) {
+    .carousel {
+        max-width: 70%;
+        margin: 0 auto;
+    }
 }
 
 
